--- a/src/output.css
+++ b/src/output.css
@@ -1377,6 +1377,10 @@ html[data-theme="dark"] {
 }
 
 @media (min-width: 768px) {
+  .md\:block {
+    display: block;
+  }
+
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
